<resources>
    <string name="app_name">PopularMoviesStage2</string>
    <string name="most_popular_title">Most Popular</string>
    <string name="top_rated_title">Top Rated</string>
    <string name="favorites_title">Favorites</string>
    <string name="favorites_option">Add to Favorites</string>
    <string name="unfavorites_option">Remove from Favorites</string>

    <!--Detail Items-->
    <string name="parsed_poster_icon">Movie Poster Image</string>
    <string name="parsed_movie_title">Movie Title</string>
    <string name="parsed_release_date">Movie Release Date</string>
    <string name="parsed_vote_average">Movie Vote Average</string>
    <string name="parsed_plot_synopsis">Movie Plot Synopsis</string>
    <string name="parsed_fraction">/10</string>
    <string name="beginning_of_trailers">Trailers: </string>
    <string name="beginning_of_reviews">Reviews: </string>
    <string name="trailer_row_number">Trailer </string>
    <string name="review_row_number">Review </string>
</resources>
